--- a/ci/create-and-push-to-dockerhub.yml
+++ b/ci/create-and-push-to-dockerhub.yml
@@ -30,10 +30,9 @@ jobs:
         type: registry-image
         source:
           repository: vito/oci-build-task
-      params:
-        DOCKERFILE: repository-concourse-ansible-resource/Dockerfile
       inputs:
         - name: repository-concourse-ansible-resource
+          path: .
       outputs:
         - name: image
       run:
